bugs fixed. controller methods refactored.